# PdfChat

./: .gitignore  pyproject.toml
pdfchat/: chat.py
